--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Visual Studio project files
+*.sln
+*.vcxproj
+*.vcxproj.filters
+
 # User-specific files
+Snake_Highscore.txt
 *.rsuser
 *.suo
 *.user
